--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Computation"
+    - text: "Notes"
       href: computation.html
     - text: "R Resources"
       href: rresources.html
